# ChangeLog for net-news/straw
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/straw/ChangeLog,v 1.8 2007/03/05 16:22:03 dang Exp $

  05 Mar 2007; Daniel Gryniewicz <dang@gentoo.org>
  +files/straw-0.25.1-setup-fix.patch, straw-0.25.1-r1.ebuild:
  codegen isn't in the normal install paths; fixes bug #169343

*straw-0.26 (26 Feb 2007)

  26 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> +straw-0.26.ebuild:
  Bump to 0.26
  - Autoloading of feed content on feed selection.
  - DBus support (Subscribe to feed)
  - More usable find dialog.
  - Clipboard copy and text magnification content view.
  - Feed sorting in the feed list view.
  - Marking all feeds as read.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  21 Aug 2005; John N. Laliberte <allanonjl@gentoo.org>
  straw-0.25.1-r1.ebuild:
  fix error message when failing to find gtkhtml2 module.

*straw-0.25.1-r1 (16 Jul 2005)
*straw-0.19.2-r1 (16 Jul 2005)

  16 Jul 2005; John N. Laliberte <allanonjl@gentoo.org>
  -straw-0.19.2.ebuild, +straw-0.19.2-r1.ebuild, -straw-0.25.1.ebuild,
  +straw-0.25.1-r1.ebuild:
  add deps on gnome-python-extras because gtkhtml2 module moved.  fixes #97764

*straw-0.25.1 (18 Mar 2005)
*straw-0.23 (18 Mar 2005)
*straw-0.22.1 (18 Mar 2005)
*straw-0.22 (18 Mar 2005)
*straw-0.21.2 (18 Mar 2005)
*straw-0.19.2 (18 Mar 2005)

  18 Mar 2005; Seemant Kulleen <seemant@gentoo.org>
  +files/straw-0.21.2-convert_config.patch, +metadata.xml,
  +straw-0.19.2.ebuild, +straw-0.21.2.ebuild, +straw-0.22.ebuild,
  +straw-0.22.1.ebuild, +straw-0.23.ebuild, +straw-0.25.1.ebuild:
  Moved from net-www/straw to net-news/straw.

  08 Aug 2004; foser <foser@gentoo.org> metadata.xml :
  Remove foser@gentoo.org as specific maintainer

*straw-0.25.1 (06 Aug 2004)

  06 Aug 2004; Olivier Crete <tester@gentoo.org> +straw-0.25.1.ebuild: