@@ -20,14 +20,14 @@ EBUILD straw-0.25.1-r1.ebuild 2070 RMD160 78d11dc6659876ab52fc8c17e5ae3bcd6f33f4
 MD5 33ff14afaccd4fe2649ef0a97aa026a5 straw-0.25.1-r1.ebuild 2070
 RMD160 78d11dc6659876ab52fc8c17e5ae3bcd6f33f4c9 straw-0.25.1-r1.ebuild 2070
 SHA256 9bf5193dad252062c670c2e2fa3001b8fd908faa51e6e782af46f3baaba0b9cb straw-0.25.1-r1.ebuild 2070
-EBUILD straw-0.26.ebuild 1990 RMD160 bb1e1060d4d7bbd72029b51feedbd5ef39a63c64 SHA1 250ec09a0aebc0c460a5f22221dc766d77aaefb0 SHA256 b91740406e2ddd3e15f4326cd58560d4a7241437b9e9d348e2a7ab9dcf249095
-MD5 6967d39f551d873226624301678c4fe7 straw-0.26.ebuild 1990
-RMD160 bb1e1060d4d7bbd72029b51feedbd5ef39a63c64 straw-0.26.ebuild 1990
-SHA256 b91740406e2ddd3e15f4326cd58560d4a7241437b9e9d348e2a7ab9dcf249095 straw-0.26.ebuild 1990
-MISC ChangeLog 5517 RMD160 ae37dcfcb32db01cc05bd6f14af17e8837b9daef SHA1 ba33f6a176fd13cb8c611edd651a2a0b76302fe5 SHA256 cda3efd06313bfcd836427ab2eba0b7935594c7f28350fe4e751e9656e67e532
-MD5 9b38f2c24e0841a610c0e009fe4e023c ChangeLog 5517
-RMD160 ae37dcfcb32db01cc05bd6f14af17e8837b9daef ChangeLog 5517
-SHA256 cda3efd06313bfcd836427ab2eba0b7935594c7f28350fe4e751e9656e67e532 ChangeLog 5517
+EBUILD straw-0.26.ebuild 2110 RMD160 6e0fcb2a46bc6b651ddde679c22702fc4673f9a7 SHA1 b9e14350e8f1531b87857257ebc91b7d52846922 SHA256 543022207fb4a182917be2956ed23eb7d729e20b936fd9668326615e67174b59
+MD5 84763581addc736253950171abbc774f straw-0.26.ebuild 2110
+RMD160 6e0fcb2a46bc6b651ddde679c22702fc4673f9a7 straw-0.26.ebuild 2110
+SHA256 543022207fb4a182917be2956ed23eb7d729e20b936fd9668326615e67174b59 straw-0.26.ebuild 2110
+MISC ChangeLog 5703 RMD160 f511be054627d3405992cfa4499e0c58160d1eac SHA1 699f9ad4464a537cd5c6dce1774a1230cf694b36 SHA256 2a0d3f811ea9ef4a6b2a430b45cd6d92ea88f55958f10893d6de56ed136dbfef
+MD5 2fa245762665052ff1d2de3e5c5b8578 ChangeLog 5703
+RMD160 f511be054627d3405992cfa4499e0c58160d1eac ChangeLog 5703
+SHA256 2a0d3f811ea9ef4a6b2a430b45cd6d92ea88f55958f10893d6de56ed136dbfef ChangeLog 5703
 MISC metadata.xml 178 RMD160 52828e1ca616ad731f2ab1ed2890d6d3a7cc8043 SHA1 a42d68a6c263ea8d8cbb678548e209aa9642a74e SHA256 aeea09173ed30175422e4f951e369e1882919be3d56e655468e5d4bffea0fc3c
 MD5 7f4b1ac767214657b085c4951227af02 metadata.xml 178
 RMD160 52828e1ca616ad731f2ab1ed2890d6d3a7cc8043 metadata.xml 178
@@ -44,7 +44,7 @@ SHA256 dd8f2d96a61d249f5ca2f4b1442f0e45e972c5696c4111093a604b9f35aa35c5 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.2 (GNU/Linux)
 
-iD8DBQFF7EOQomPajV0RnrERAhpUAJ9VSHOBTqp/v5+/7ZT6rTJs+N3FuACfakXZ
-9cnR/iWO3vyP60WwqTG3zbg=
-=W3T0
+iD8DBQFGGQX/GwVqY66cHjARAqwrAJ9/70YsLC5Vt1nav+dykefrNlLoqQCeOwLO
+A2tRXcv1rWzdLhColZfx0eM=
+=gqsc
 -----END PGP SIGNATURE-----
